// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`api with multiple GET routes and one lambda 1`] = `
{
  ".wing/onrequesthandler-e645076f_c887c38c.js": "exports.handler = async function(event, context) {
  return { payload: (await (new ((function(){
return class Handler {
  constructor(clients) {
    for (const [name, client] of Object.entries(clients)) {
      this[name] = client;
    }
  }
  async handle(req) { return { status: 200, body: req.body, headers: req.headers }; }
};
})())({

})).handle(event)) ?? \\"\\", context };
};",
  "simulator.json": {
    "resources": [
      {
        "attrs": {},
        "path": "root/cloud.TestRunner",
        "props": {
          "tests": {},
        },
        "type": "wingsdk.cloud.TestRunner",
      },
      {
        "attrs": {},
        "path": "root/my_api/OnRequestHandler-e645076f",
        "props": {
          "environmentVariables": {},
          "sourceCodeFile": ".wing/onrequesthandler-e645076f_c887c38c.js",
          "sourceCodeLanguage": "javascript",
          "timeout": 60000,
        },
        "type": "wingsdk.cloud.Function",
      },
      {
        "attrs": {},
        "path": "root/my_api",
        "props": {
          "openApiSpec": {
            "openapi": "3.0.3",
            "paths": {
              "/hello/bat": {
                "get": {
                  "operationId": "get-hello/bat",
                  "parameters": [],
                  "responses": {
                    "200": {
                      "content": {},
                      "description": "200 response",
                    },
                  },
                },
              },
              "/hello/foo": {
                "get": {
                  "operationId": "get-hello/foo",
                  "parameters": [],
                  "responses": {
                    "200": {
                      "content": {},
                      "description": "200 response",
                    },
                  },
                },
              },
            },
          },
        },
        "type": "wingsdk.cloud.Api",
      },
      {
        "attrs": {},
        "path": "root/my_api/ApiEventMapping-e645076f",
        "props": {
          "publisher": "\${root/my_api#attrs.handle}",
          "subscriber": "\${root/my_api/OnRequestHandler-e645076f#attrs.handle}",
          "subscriptionProps": {
            "routes": [
              {
                "method": "GET",
                "path": "/hello/foo",
              },
              {
                "method": "GET",
                "path": "/hello/bat",
              },
            ],
          },
        },
        "type": "wingsdk.sim.EventMapping",
      },
    ],
    "sdkVersion": "0.0.0",
  },
  "tree.json": {
    "tree": {
      "children": {
        "Handler": {
          "attributes": {
            "wing:resource:connections": [],
          },
          "constructInfo": {
            "fqn": "constructs.Construct",
            "version": "10.1.314",
          },
          "display": {
            "description": "An inflight resource",
            "hidden": true,
            "title": "Inflight",
          },
          "id": "Handler",
          "path": "root/Handler",
        },
        "cloud.TestRunner": {
          "attributes": {
            "wing:resource:connections": [],
          },
          "constructInfo": {
            "fqn": "constructs.Construct",
            "version": "10.1.314",
          },
          "display": {
            "description": "A suite of APIs for running tests and collecting results.",
            "hidden": true,
            "title": "TestRunner",
          },
          "id": "cloud.TestRunner",
          "path": "root/cloud.TestRunner",
        },
        "my_api": {
          "attributes": {
            "wing:resource:connections": [
              {
                "direction": "outbound",
                "implicit": false,
                "relationship": "on_get_request",
                "resource": "root/my_api/OnRequestHandler-e645076f",
              },
            ],
          },
          "children": {
            "ApiEventMapping-e645076f": {
              "attributes": {
                "wing:resource:connections": [],
              },
              "constructInfo": {
                "fqn": "constructs.Construct",
                "version": "10.1.314",
              },
              "display": {
                "hidden": true,
              },
              "id": "ApiEventMapping-e645076f",
              "path": "root/my_api/ApiEventMapping-e645076f",
            },
            "OnRequestHandler-e645076f": {
              "attributes": {
                "wing:resource:connections": [
                  {
                    "direction": "inbound",
                    "implicit": false,
                    "relationship": "on_get_request",
                    "resource": "root/my_api",
                  },
                ],
              },
              "constructInfo": {
                "fqn": "constructs.Construct",
                "version": "10.1.314",
              },
              "display": {
                "description": "A cloud function (FaaS)",
                "title": "Function",
              },
              "id": "OnRequestHandler-e645076f",
              "path": "root/my_api/OnRequestHandler-e645076f",
            },
          },
          "constructInfo": {
            "fqn": "constructs.Construct",
            "version": "10.1.314",
          },
          "display": {
            "description": "A REST API endpoint",
            "title": "Api",
          },
          "id": "my_api",
          "path": "root/my_api",
        },
      },
      "constructInfo": {
        "fqn": "constructs.Construct",
        "version": "10.1.314",
      },
      "id": "root",
      "path": "root",
    },
    "version": "tree-0.1",
  },
}
`;

exports[`create an api 1`] = `
{
  "simulator.json": {
    "resources": [
      {
        "attrs": {},
        "path": "root/cloud.TestRunner",
        "props": {
          "tests": {},
        },
        "type": "wingsdk.cloud.TestRunner",
      },
      {
        "attrs": {},
        "path": "root/my_api",
        "props": {
          "openApiSpec": {
            "openapi": "3.0.3",
            "paths": {},
          },
        },
        "type": "wingsdk.cloud.Api",
      },
    ],
    "sdkVersion": "0.0.0",
  },
  "tree.json": {
    "tree": {
      "children": {
        "cloud.TestRunner": {
          "attributes": {
            "wing:resource:connections": [],
          },
          "constructInfo": {
            "fqn": "constructs.Construct",
            "version": "10.1.314",
          },
          "display": {
            "description": "A suite of APIs for running tests and collecting results.",
            "hidden": true,
            "title": "TestRunner",
          },
          "id": "cloud.TestRunner",
          "path": "root/cloud.TestRunner",
        },
        "my_api": {
          "attributes": {
            "wing:resource:connections": [],
          },
          "constructInfo": {
            "fqn": "constructs.Construct",
            "version": "10.1.314",
          },
          "display": {
            "description": "A REST API endpoint",
            "title": "Api",
          },
          "id": "my_api",
          "path": "root/my_api",
        },
      },
      "constructInfo": {
        "fqn": "constructs.Construct",
        "version": "10.1.314",
      },
      "id": "root",
      "path": "root",
    },
    "version": "tree-0.1",
  },
}
`;
